<resources>
    <string name="app_name">Popular Movies</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_enter_api_key">Enter KEY</string>
    <string name="action_enable_wifi">Enable Wi-Fi</string>

    <string name="button_favorite_mark">mark\nfavorite</string>
    <string name="button_favorite_remove">remove\nfavorite</string>

    <string name="description_movie_poster">movie poster</string>
    <string name="description_tmdb_logo">The Movie Database (TMDb) logo</string>
    <string name="description_video_play">play video</string>
    <string name="description_video_share">share video</string>

    <string name="detail_name">Movie Detail</string>
    <string name="detail_rating_max">/10</string>
    <string name="detail_reviews_empty">There are no reviews for %s</string>
    <string name="detail_videos_empty">There are no videos for %s</string>

    <string name="dialog_about_title">About %s</string>
    <string name="dialog_about_tmdb_attribution">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="dialog_api_key_title">TMDb API key</string>
    <string name="dialog_api_key_hint">please enter your key here</string>

    <string name="error_wrong_api_key">Please check API key</string>
    <string name="error_no_internet_connection">Please check Internet connection</string>
    <string name="error_not_implemented" translatable="false">not implemented (%s)</string>

    <string name="message_order_by">Order by %s</string>

    <string name="mock_overview">Several years after the demise of Jurassic World, a volcanic eruption threatens the remaining dinosaurs on the island of Isla Nublar. Claire Dearing, the former park manager and founder of the Dinosaur Protection Group, recruits Owen Grady to help prevent the extinction of the dinosaurs once again.</string>
    <string name="mock_rating">7.700000</string>
    <string name="mock_title">Jurassic World: Fallen Kingdom</string>
    <string name="mock_release_date">2018-06-06</string>

    <string name="pref_api_title">API key</string>
    <string name="pref_api_none" translatable="false">none</string>
    <string name="pref_api_key" translatable="false">api_key</string>

    <string name="pref_sort_mode_title">Sort criteria</string>
    <string name="pref_sort_mode_key" translatable="false">sort_mode</string>
    <string name="pref_sort_mode_label_favorite">favorite</string>
    <string name="pref_sort_mode_label_top_rated">highest rating</string>
    <string name="pref_sort_mode_label_popular">popularity</string>
    <string name="pref_sort_mode_value_favorite" translatable="false">favorite</string>
    <string name="pref_sort_mode_value_top_rated" translatable="false">top_rated</string>
    <string name="pref_sort_mode_value_popular" translatable="false">popular</string>

    <string name="title_overview">Overview</string>
    <string name="title_trailers">Trailers</string>
    <string name="title_reviews">Reviews</string>

</resources>
